--- a/Snapchat/Info.plist
+++ b/Snapchat/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Ayy nigga let me get in yo photos</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Cn we have access to your nudes?</string>
 	<key>CFBundleDevelopmentRegion</key>
